--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
+@import url('https://rsms.me/inter/inter.css');
+
+/* Components */
+@import './form.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
