feat: Password reset

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @import url('https://rsms.me/inter/inter.css');
 
 /* Components */
+@import './alert.css';
 @import './form.css';
 
 @tailwind base;
